helm/workloads/vikunja/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  namespace: vikunja
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    geron.io/dns-scope: internal
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - secretName: todo-vasary-tls
      hosts:
        - todo.vasary.org
  rules:
    - host: todo.vasary.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  name: http
